# win-fp-debug

./: .gitignore  BUILDING.md  Cargo.toml  INTERNALS.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: cli.rs  elevation.rs  error.rs  main.rs  output.rs  winbio_helpers.rs
src/diagnostics/: hardware.rs  mod.rs  service.rs  winbio.rs
src/operations/: capture.rs  credential_state.rs  delete.rs  delete_database.rs  enroll.rs  enum_databases.rs  identify.rs  list.rs  mod.rs  reinstall_driver.rs  remove_device.rs  service.rs  verify.rs
