[package]
name = "win-fp-debug"
version = "0.1.0"
edition = "2021"
description = "Windows Fingerprint Reader Diagnostic Tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
anyhow = "1"
serde_json = "1"

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Devices_BiometricFramework",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_Devices_DeviceAndDriverInstallation",
]
